Worked on SaleTest and ProductTest